Add a hacky script

--- a/elastic/environments/hackathon01/elasticsearch-full-deployment.yaml
+++ b/elastic/environments/hackathon01/elasticsearch-full-deployment.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   version: 7.4.0
   nodeSets:
-  - name: hackthon-es
+  - name: hackthon-es01
     config:
       # most Elasticsearch configuration parameters are possible to set, e.g:
       node.attr.attr_name: attr_value
