--- a/elastic/environments/hackathon02/elasticsearch-full-deployment.yaml
+++ b/elastic/environments/hackathon02/elasticsearch-full-deployment.yaml
@@ -31,7 +31,7 @@ spec:
         #     privileged: true
         #   command: ['sh', '-c', 'sysctl -w vm.max_map_count=262144']
         containers:
-        - name: elasticsearch
+        - name: elasticsearch-hackthon-es02
           # specify resource limits and requests
           resources:
             limits:
@@ -44,7 +44,7 @@ spec:
   #   # request 2Gi of persistent data storage for pods in this topology element
     volumeClaimTemplates:
     - metadata:
-        name: elasticsearch-data
+        name: elasticsearch-hackthon-es02-data
       spec:
         accessModes:
         - ReadWriteOnce
