Add a hacky script

--- a/elastic/environments/hackathon01/elasticsearch-full-deployment.yaml
+++ b/elastic/environments/hackathon01/elasticsearch-full-deployment.yaml
@@ -2,7 +2,7 @@
 apiVersion: elasticsearch.k8s.elastic.co/v1beta1
 kind: Elasticsearch
 metadata:
-  name: elasticsearch
+  name: elasticsearch01
 spec:
   version: 7.4.0
   nodeSets:
