--- a/elastic/environments/hackathon02/elasticsearch-full-deployment.yaml
+++ b/elastic/environments/hackathon02/elasticsearch-full-deployment.yaml
@@ -2,7 +2,7 @@
 apiVersion: elasticsearch.k8s.elastic.co/v1beta1
 kind: Elasticsearch
 metadata:
-  name: elasticsearch
+  name: elasticsearch02
 spec:
   version: 6.8.0
   nodeSets:
