--- a/elastic/environments/hackathon01/elasticsearch-full-deployment.yaml
+++ b/elastic/environments/hackathon01/elasticsearch-full-deployment.yaml
@@ -20,7 +20,7 @@ spec:
       metadata:
         labels:
           # additional labels for pods
-          foo: bar
+          name: elasticsearch01
       spec:
         # this changes the kernel setting on the node to allow ES to use mmap
         # if you uncomment this init container you will likely also want to remove the
@@ -31,7 +31,7 @@ spec:
         #     privileged: true
         #   command: ['sh', '-c', 'sysctl -w vm.max_map_count=262144']
         containers:
-        - name: elasticsearch-hackthon-es01
+        - name: elasticsearch01
           # specify resource limits and requests
           resources:
             limits:
@@ -44,7 +44,7 @@ spec:
   #   # request 2Gi of persistent data storage for pods in this topology element
     volumeClaimTemplates:
     - metadata:
-        name: elasticsearch-hackthon-es01-data
+        name: elasticsearch01-data
       spec:
         accessModes:
         - ReadWriteOnce
