Add a hacky script

--- a/elastic/environments/hackathon01/elasticsearch-full-deployment.yaml
+++ b/elastic/environments/hackathon01/elasticsearch-full-deployment.yaml
@@ -63,7 +63,7 @@ spec:
   http:
     tls:
       selfSignedCertificate:
-        disable: true
+        disable: false
     service:
       spec:
         # expose this cluster Service with a LoadBalancer
