--- a/elastic/environments/hackathon02/elasticsearch-full-deployment.yaml
+++ b/elastic/environments/hackathon02/elasticsearch-full-deployment.yaml
@@ -60,10 +60,15 @@ spec:
   #   entries:
   #   - key: value1
   #     path: newkey # project a key to a specific path (optional)
+  # http:
+  #   tls:
+  #     certificate:
+  #       secretName: adobe-dev-es
   http:
     tls:
-      certificate:
-        secretName: adobe-dev-es
+      selfSignedCertificate:
+        disable: false
+
     service:
       spec:
         # expose this cluster Service with a LoadBalancer
