--- a/elastic/environments/hackathon01/elasticsearch-full-deployment.yaml
+++ b/elastic/environments/hackathon01/elasticsearch-full-deployment.yaml
@@ -31,7 +31,7 @@ spec:
         #     privileged: true
         #   command: ['sh', '-c', 'sysctl -w vm.max_map_count=262144']
         containers:
-        - name: elasticsearch01
+        - name: elasticsearch
           # specify resource limits and requests
           resources:
             limits:
