--- a/elastic/environments/hackathon01/elasticsearch-full-deployment.yaml
+++ b/elastic/environments/hackathon01/elasticsearch-full-deployment.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   version: 7.4.0
   nodeSets:
-  - name: hackthon-es01
+  - name: hackthon-es
     config:
       # most Elasticsearch configuration parameters are possible to set, e.g:
       node.attr.attr_name: attr_value
@@ -20,7 +20,7 @@ spec:
       metadata:
         labels:
           # additional labels for pods
-          name: elasticsearch01
+          name: elasticsearch
       spec:
         # this changes the kernel setting on the node to allow ES to use mmap
         # if you uncomment this init container you will likely also want to remove the
@@ -44,7 +44,7 @@ spec:
   #   # request 2Gi of persistent data storage for pods in this topology element
     volumeClaimTemplates:
     - metadata:
-        name: elasticsearch01-data
+        name: elasticsearch-data
       spec:
         accessModes:
         - ReadWriteOnce
